--- a/basic_assignment/assignment_1_task1/iggy_data_cleaning.Rmd
+++ b/basic_assignment/assignment_1_task1/iggy_data_cleaning.Rmd
@@ -62,16 +62,26 @@ clean <- only_program %>%
     str_detect(program, "QRM") ~ "QUANTITATIVE RISK MANAGEMENT",
     str_detect(program, "QUANTATIVE RISK MANAGEMENT") ~ "QUANTITATIVE RISK MANAGEMENT",
     program == "BIOINFROMATICS" ~ "BIOINFORMATICS",
+    str_detect(program, "INFORMATION SCIENCE") ~ "INFORMATION SCIENCES",
     str_detect(program, "DATA SCIENCE") ~ "DATA SCIENCE",
+    str_detect(program, "INFORMATION STUDIES") ~ "DATA SCIENCE",
     str_detect(program, "FINANCE & TECHNOLOGY") ~ "FINANCE AND TECHNOLOGY",
     str_detect(program, "FINANCE AND TECHNOLOGY") ~ "FINANCE AND TECHNOLOGY",
     str_detect(program, "F&T") ~ "FINANCE AND TECHNOLOGY",
     str_detect(program, "FINTECH") ~ "FINANCE AND TECHNOLOGY",
     str_detect(program, "HUMAN LANGUAGE TECHNOLOGY") ~ "HUMAN LANGUAGE TECHNOLOGY",
+    program == "HLT" ~ "HUMAN LANGUAGE TECHNOLOGY",
     str_detect(program, "LINGUISTICS") ~ "LINGUISTICS",
     str_detect(program, "E&OR") | str_detect(program, "EOR") ~ "ECONOMETRICS",
+    str_detect(program, "BUSINESS ANALYTICS") ~ "BUSINESS ANALYTICS",
+    program == "EDS" ~ "ECONOMETRICS",
+    str_detect(program, "FINANCE") ~ "FINANCE",
+    str_detect(program, "COMPUTER SCIENCE") ~ "COMPUTER SCIENCE",
+    program %in% c("DMT", "HTTPS://FORMS.GLE/ETY4NES3KHRQPTMLA", "JE ZUSJE",
+                   "OR", "PYTHON") ~ NA_character_,
     TRUE ~ program
-  ))
+  )) %>% 
+  select(id, clean_program)
 
 grouped <- clean %>% 
   group_by(`clean_program`) %>% 
@@ -83,18 +93,6 @@ head(grouped)
 
 
 ```{r}
-grouped <- clean %>% 
-  group_by(`clean_program`) %>% 
-  summarise(n = n()) %>%
-  arrange(-n)
-
-head(grouped)
+# save cleaned data
+write_csv(clean, "data/cleaned_programs.csv")
 ```
-
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
-
