--- a/assignment2/EDA_cate.ipynb
+++ b/assignment2/EDA_cate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "immune-oklahoma",
+   "id": "impaired-serbia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "lyric-rapid",
+   "id": "legendary-florence",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "consecutive-funds",
+   "id": "assumed-thunder",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "spare-torture",
+   "id": "collected-steam",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neural-ensemble",
+   "id": "according-egyptian",
    "metadata": {},
    "source": [
     "### Correlation\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "compliant-peripheral",
+   "id": "cardiovascular-worship",
    "metadata": {
     "scrolled": true
    },
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "running-collective",
+   "id": "juvenile-circus",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "happy-factory",
+   "id": "academic-mongolia",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "impressed-colonial",
+   "id": "impossible-transformation",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "activated-increase",
+   "id": "romance-aberdeen",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "complex-quality",
+   "id": "turkish-effect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "subjective-handbook",
+   "id": "polyphonic-montana",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "criminal-hobby",
+   "id": "tested-auditor",
    "metadata": {},
    "outputs": [
     {
@@ -1481,8 +1481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "small-highland",
+   "execution_count": 132,
+   "id": "compressed-rebecca",
    "metadata": {},
    "outputs": [
     {
@@ -1506,13 +1506,14 @@
     "plt.title(\"Clicked hotel\", size = text_size)\n",
     "plt.xlabel(\"Review score\", size = text_size)\n",
     "plt.ylabel('Fraction', size = text_size)\n",
+    "plt.savefig(\"EDA/Figures/clicked_review.pdf\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "smooth-apollo",
+   "execution_count": 133,
+   "id": "through-turner",
    "metadata": {},
    "outputs": [
     {
@@ -1534,13 +1535,14 @@
     "plt.title(\"Booked hotel\", size = text_size)\n",
     "plt.xlabel(\"Review score\", size = text_size)\n",
     "plt.ylabel('Fraction', size = text_size)\n",
+    "plt.savefig(\"EDA/Figures/booked_review.pdf\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "cooked-wednesday",
+   "execution_count": 134,
+   "id": "obvious-evans",
    "metadata": {},
    "outputs": [
     {
@@ -1566,14 +1568,15 @@
     "plt.title(\"Clicked hotel\", size = text_size)\n",
     "plt.xlabel(\"Price\", size = text_size)\n",
     "plt.ylabel('Fraction', size = text_size)\n",
+    "plt.savefig(\"EDA/Figures/clicked_price.pdf\")\n",
     "plt.show()\n",
     "plt.rc('xtick', labelsize=25) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "informal-retirement",
+   "execution_count": 135,
+   "id": "acute-assembly",
    "metadata": {},
    "outputs": [
     {
@@ -1599,6 +1602,7 @@
     "plt.title(\"Booked hotel\", size = text_size)\n",
     "plt.xlabel(\"Price\", size = text_size)\n",
     "plt.ylabel('Fraction', size = text_size)\n",
+    "plt.savefig(\"EDA/Figures/booked_price.pdf\")\n",
     "plt.show()\n",
     "plt.rc('xtick', labelsize=25) "
    ]
@@ -1606,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alive-productivity",
+   "id": "synthetic-interim",
    "metadata": {},
    "outputs": [],
    "source": []
