--- a/assignment2/feature_eng_cate.ipynb
+++ b/assignment2/feature_eng_cate.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "religious-bridges",
+   "execution_count": 1,
+   "id": "modular-craps",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "level-carolina",
+   "execution_count": 14,
+   "id": "taken-resident",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "[8 rows x 53 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "otherwise-missile",
+   "execution_count": 3,
+   "id": "stable-platinum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "choice-respondent",
+   "execution_count": 12,
+   "id": "integral-right",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,17 +362,66 @@
     "    missing_values = df.isna().mean().round(4) * 100\n",
     "    missing_values = pd.DataFrame(missing_values).reset_index()\n",
     "    missing_values.columns = [\"column\", \"missing\"]\n",
+    "    missing_values.sort_values(\"missing\", inplace=True)\n",
+    "    print(missing_values)\n",
     "    # filter where there are missing values\n",
     "    missing_values.query(\"missing > 50\", inplace=True)  # remove columns with more than 50 % of missing values\n",
-    "    missing_values.sort_values(\"missing\", inplace=True)\n",
     "    #print(missing_values)\n",
-    "    df.drop(missing_values.column, axis=1, inplace=True)"
+    "    df.drop(missing_values.column, axis=1, inplace=True)\n",
+    "    print(missing_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "native-madrid",
+   "execution_count": 13,
+   "id": "assisted-bennett",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         column  missing\n",
+      "0                       srch_id     0.00\n",
+      "23                  random_bool     0.00\n",
+      "21     srch_saturday_night_bool     0.00\n",
+      "20              srch_room_count     0.00\n",
+      "19          srch_children_count     0.00\n",
+      "18            srch_adults_count     0.00\n",
+      "17          srch_booking_window     0.00\n",
+      "16          srch_length_of_stay     0.00\n",
+      "15          srch_destination_id     0.00\n",
+      "14               promotion_flag     0.00\n",
+      "13                    price_usd     0.00\n",
+      "24                   click_bool     0.00\n",
+      "12                     position     0.00\n",
+      "9          prop_location_score1     0.00\n",
+      "8               prop_brand_bool     0.00\n",
+      "6               prop_starrating     0.00\n",
+      "5                       prop_id     0.00\n",
+      "4               prop_country_id     0.00\n",
+      "3   visitor_location_country_id     0.00\n",
+      "2                       site_id     0.00\n",
+      "1                     date_time     0.00\n",
+      "11    prop_log_historical_price     0.00\n",
+      "25                 booking_bool     0.00\n",
+      "7             prop_review_score     0.15\n",
+      "10         prop_location_score2    21.99\n",
+      "22    orig_destination_distance    32.43\n",
+      "Empty DataFrame\n",
+      "Columns: [column, missing]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "remove_missing_values(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "artificial-acrylic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "killing-breathing",
+   "execution_count": 6,
+   "id": "economic-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "exact-jungle",
+   "execution_count": 7,
+   "id": "unsigned-baker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "stuck-custom",
+   "id": "coordinated-decade",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noticed-muscle",
+   "id": "composed-encyclopedia",
    "metadata": {},
    "outputs": [],
    "source": []
