--- a/assignment2/Model/Model_Lotte_Kaggle.ipynb
+++ b/assignment2/Model/Model_Lotte_Kaggle.ipynb
@@ -12,12 +12,13 @@
     "import numpy as np\n",
     "import random\n",
     "import matplotlib\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,8 @@
     "    historical = df.groupby(\"prop_id\")[[\"click_bool\", \"booking_bool\"]].mean().reset_index()\n",
     "    historical.columns = [historical.columns[0]] + [x + \"_rate\" for x in historical.columns[1:]]\n",
     "    df = pd.merge(df, historical, on=\"prop_id\")\n",
-    "    return df.sort_values(\"srch_id\")\n",
+    "    df.sort_values(\"srch_id\", inplace = True)\n",
+    "    return df\n",
     "\n",
     "def join_historical_data(df, path = \"hist_click_book.csv\"):\n",
     "    \"\"\"\n",
@@ -141,6 +143,9 @@
     "    \n",
     "## other ----------------------------------\n",
     "\n",
+    "def remove_cols(df, cols = [\"position\", \"prop_id\"]):\n",
+    "    df.drop(cols, axis=1, inplace=True)\n",
+    "\n",
     "def remove_positions(df, positions = [5, 11, 17, 23]):\n",
     "    \"\"\"\n",
     "    removes hotels with specified positions \n",
@@ -149,9 +154,11 @@
     "    df = df[df[\"position\"].isin(positions) == False]\n",
     "\n",
     "def add_score(df):\n",
+    "    \n",
     "    \"\"\"\n",
     "    adds 'score' column to the df: 5 for booked, 1 for clicked\n",
     "    \"\"\"\n",
+    "    \n",
     "    score = []\n",
     "    for book, click in zip(df.booking_bool, df.click_bool):\n",
     "        if book == 1:\n",
@@ -173,6 +180,55 @@
     "    \n",
     "    return pd.get_dummies(df, columns=cols)\n",
     "\n",
+    "def sampling(df, target, method=\"undersampling\", frac=0.3):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    df: input dataframe\n",
+    "    targetcol: target column of majority class\n",
+    "    method: specifies method of sampling - 'undersampling' or 'combination' of undersampling and oversampling.\n",
+    "    frac: final fraction minority wrt majority class (default fraction 0.15/0.85)\n",
+    "    \n",
+    "    returns: df with undersampled majority and oversampled minority class\n",
+    "    \n",
+    "    note that this only has to be performed on the training data!\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Split df in minority and majority\n",
+    "    minority = df.loc[df[target] > 0]\n",
+    "    majority = df.loc[df[target] == 0]\n",
+    "    lenmin = len(minority)\n",
+    "    lenmaj = len(majority)\n",
+    "    \n",
+    "    # Calculate current fraction\n",
+    "    frac_min = lenmin/(lenmin+lenmaj)\n",
+    "    frac_maj = 1-frac_min\n",
+    "    print(f\"Current fraction:\\nMinority class: {frac_min}, Majority class: {frac_maj}\")\n",
+    "    \n",
+    "    if method == \"undersampling\":\n",
+    "        \n",
+    "        sampling_frac = ((1-frac)/frac*lenmin)/lenmaj\n",
+    "        sampled_df = df.groupby('srch_id').sample(frac=sampling_frac)\n",
+    "        fin_frac = lenmin / (len(sampled_df) + lenmin)\n",
+    "\n",
+    "    elif method == \"combination\":\n",
+    "        \n",
+    "        # This still needs to be implemented\n",
+    "        return\n",
+    "    else:\n",
+    "        raise ExceptionError(\"Invalid argument for 'method'\")\n",
+    "        \n",
+    "    \n",
+    "    print(f\"Final fraction:\\nMinority class: {fin_frac}, Majority class: {1-fin_frac}\")\n",
+    "    \n",
+    "    dfs = [minority, sampled_df]\n",
+    "    finaldf = pd.concat(dfs)\n",
+    "    finaldf.sort_values(\"srch_id\", inplace = True)\n",
+    "    finaldf = finaldf.reset_index(drop=True)\n",
+    "\n",
+    "    print(\"Done\")\n",
+    "    return finaldf\n",
+    "\n",
     "\n",
     "### Feature engineering function -----------\n",
     "\n",
@@ -183,8 +239,11 @@
     "    replace_missing_values(df)\n",
     "    new_historical_price(df)\n",
     "    add_price_position(df)\n",
-    "    average_numerical_features(df)\n",
+    "#     df = average_numerical_features(df)\n",
+    "#     df = add_historical_booking_click(df)\n",
     "    add_score(df)\n",
+    "    #remove_cols(df)\n",
+    "    return df\n",
     "\n",
     "def feature_engineering_test(df):\n",
     "    \n",
@@ -193,7 +252,16 @@
     "    replace_missing_values(df)\n",
     "    new_historical_price(df)\n",
     "    add_price_position(df)\n",
-    "    average_numerical_features(df)"
+    "#     df = average_numerical_features(df)\n",
+    "#     df = join_historical_data(df, path=\"data/hist_click_book.csv\")\n",
+    "    return df\n",
+    "    \n",
+    "def create_df_queries_freq(df):\n",
+    "    df_queries = pd.DataFrame()\n",
+    "    df_queries = pd.crosstab(index=df['srch_id'], columns='count', colnames=['srch_id'])\n",
+    "    df_queries.head()\n",
+    "    df_queries.to_csv(\"../df_queries.csv\")\n",
+    "    return pd.read_csv(\"../df_queries.csv\")"
    ]
   },
   {
@@ -203,8 +271,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/training_set_VU_DM.csv\")\n",
-    "testset = pd.read_csv(\"data/test_set_VU_DM.csv\")\n",
-    "df.describe()"
+    "testset = pd.read_csv(\"data/test_set_VU_DM.csv\")"
    ]
   },
   {
@@ -215,8 +282,8 @@
    "source": [
     "# add historical bookings to test and trainingset\n",
     "\n",
-    "df = add_historical_booking_click(df)\n",
-    "testset = join_historical_data(testset, path = \"hist_click_book.csv\")"
+    "df = feature_engineering_train(df)\n",
+    "testset = feature_engineering_test(testset)"
    ]
   },
   {
@@ -225,10 +292,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# feature engineering for test and trainingset\n",
+    "# check\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "df = sampling(df, \"score\", method=\"undersampling\")\n",
+    "end = time.time()\n",
     "\n",
-    "feature_engineering_train(df)\n",
-    "feature_engineering_test(testset)"
+    "print(f\"Execution took {end-start:.2f} seconds\")"
    ]
   },
   {
@@ -237,7 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "properties = testset['prop_id']"
+    "# Second check\n",
+    "df.head()"
    ]
   },
   {
@@ -246,6 +325,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save properties\n",
+    "properties = testset['prop_id']\n",
+    "\n",
+    "# delete \n",
+    "\n",
     "del df['prop_id']\n",
     "del df['position']\n",
     "del testset['prop_id']"
@@ -257,27 +341,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainingset (df) should have 1 column more; the target column\n",
+    "# trainingset (df) should have 1 column more; the target column score\n",
     "\n",
-    "len(testset.columns), len(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(30)"
+    "print(len(testset.columns), len(df.columns))\n",
+    "print(set(df.columns)-set(testset.columns))"
    ]
   },
   {
@@ -371,6 +438,7 @@
    "source": [
     "# learning rate to 0.1\n",
     "# max_depth 10\n",
+    "# n_estimators\n",
     "# with the hist thing.\n",
     "\n",
     "model = xgb.XGBRanker(  \n",
@@ -381,7 +449,7 @@
     "    learning_rate=0.1,\n",
     "    colsample_bytree=0.9, \n",
     "    eta=0.05, \n",
-    "    max_depth=10, \n",
+    "    max_depth=8, \n",
     "    n_estimators=110, \n",
     "    subsample=0.75,\n",
     "    )\n",
@@ -435,6 +503,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Most important features\n",
+    "\n",
+    "xgb.plot_importance(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preparation for submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# This could be done more efficiently\n",
     "\n",
     "# Prepare output file\n",
@@ -459,8 +545,12 @@
    "outputs": [],
    "source": [
     "# Sort on predicted_score output within srch_id\n",
+    "start = time.time()\n",
     "\n",
-    "out = output.groupby('srch_id').apply(pd.DataFrame.sort_values, 'pred_scores', ascending=False)"
+    "out = output.groupby('srch_id').apply(pd.DataFrame.sort_values, 'pred_scores', ascending=False)\n",
+    "\n",
+    "end = time.time()\n",
+    "print(f\"Execution took {end-start:.2f} seconds\")"
    ]
   },
   {
@@ -489,18 +579,7 @@
    "source": [
     "# write to csv\n",
     "\n",
-    "out.to_csv('data/submission_2.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Most important features\n",
-    "\n",
-    "xgb.plot_importance(model)"
+    "out.to_csv('data/15052021-2.csv', index=False)"
    ]
   },
   {
